# Resvg4JUCE

./: CMakeLists.txt
